# https2socks

./: Cargo.toml  README.md
h2s/: Cargo.toml
h2s/src/: address.rs  http_local.rs  lib.rs  socks5.rs
