[package]
name = "h2s"
version = "0.1.0"
edition = "2021"

[lib]
name = "h2s"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "=1.7.1", features = ["rt","io-util","signal"]}
hyper = { version = "=0.14.9", features = ["full"]}
bytes = "0.5.4"
futures = "0.3.4"
pin-project = "0.4.8"
http = "0.2.0"
log = "0.4.8"
env_logger = "0.7.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
